# Nexus

./: .env.example  .gitignore  README.md  System-design.mmd  docker-compose.yml  pyproject.toml
db/: liquibase.properties
db/changelogs/: db.changelog-master.xml
db/changelogs/changesets/: 001-symbols.xml  002-credentials.xml  003-strategy.xml  004-trading-session.xml  005-orders.xml  006-backtest.xml  007-telemetry.xml
db/mysql/conf.d/: nexus.cnf
db/timescaledb/: init.sql
mcp/: __init__.py
mcp/ssh_server/: README.md  config.py  logging_setup.py  server.py  ssh_client.py
mcp/ssh_server/tools/: docker.py  logs.py  sftp.py  shell.py
nexus/: __init__.py
nexus/ai/: __init__.py  features.py  iv_engine.py  portfolio_optimizer.py  regime.py  sentiment.py  signal_ensemble.py  strategy_selector.py  trainer.py
nexus/backtest/: __init__.py  analytics.py  data_loader.py  engine.py  fill_simulator.py  options_pricer.py  walk_forward.py
nexus/bus/: consumer.py  publisher.py
nexus/core/: config.py  schemas.py
nexus/ingestion/: ibkr_connector.py
nexus/oms/: order_builder.py  paper_engine.py  router.py  sizer.py
nexus/risk/: greeks.py  limits.py  manager.py
nexus/strategy/: base.py  registry.py
nexus/strategy/strategies/: iron_condor.py  ma_crossover.py
nexus/telemetry/: aggregator.py
tests/mcp/: test_config.py  test_logging_setup.py  test_ssh_client.py  test_tools.py
