[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.1.0"
description = "AI-first quantitative trading platform"
requires-python = ">=3.11"
dependencies = [
    # Broker
    "ib-insync>=0.9.86",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Event Bus
    "redis[hiredis]>=5.0.4",

    # Databases
    "sqlalchemy>=2.0.30",
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",          # TimescaleDB async driver
    "psycopg2-binary>=2.9.9",   # TimescaleDB sync driver (Liquibase compat)
    "alembic>=1.13.0",          # optional ORM migrations complement

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",

    # Config
    "python-dotenv>=1.0.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Data processing & quant math
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scipy>=1.13.0",            # Black-Scholes Greeks (norm.cdf, norm.pdf)
    "pandas-ta>=0.3.14b",       # Technical indicators

    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
ml = [
    # LLM Sentiment
    "anthropic>=0.28.0",        # Claude claude-haiku-4-5 for news sentiment analysis
    # Regime Detection
    "hmmlearn>=0.3.2",          # Gaussian HMM for market regime clustering
    "xgboost>=2.0.3",           # XGBoost regime classifier (semi-supervised)
    # Signal Ensemble + Portfolio Optimisation
    "scikit-learn>=1.5.0",      # stacking ensemble, cross-validation
    "cvxpy>=1.5.0",             # convex optimisation (mean-variance portfolio)
    # Deep Learning (optional — for LSTM sequence models in Phase 5)
    "torch>=2.3.0",
    # Legacy
    "langchain>=0.2.0",
    "openai>=1.30.0",
]
backtest = [
    "vectorbt>=0.26.2",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "types-redis>=4.6.0.20240311",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
